sky layouts update 2

--- a/app/src/main/res/layout/personal_feed_product_item.xml
+++ b/app/src/main/res/layout/personal_feed_product_item.xml
@@ -46,7 +46,7 @@
         android:id="@+id/arrow"
         android:layout_width="@dimen/personal_feed_arrow"
         android:layout_height="@dimen/personal_feed_arrow"
-        android:padding="@dimen/sku_hori_padding"
+        android:padding="@dimen/sku_padding_10"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:adjustViewBounds="true"
