--- a/app/src/main/res/drawable/sku_round_layout.xml
+++ b/app/src/main/res/drawable/sku_round_layout.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/staples_red" >
+        android:color="@color/staples_white" >
     </solid>
     <stroke
         android:width="1dp"
