--- a/app/src/main/res/layout/sku_review_brief_item.xml
+++ b/app/src/main/res/layout/sku_review_brief_item.xml
@@ -2,18 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/sku_padding_10"
+    android:paddingRight="@dimen/sku_padding_10"
+    android:paddingTop="@dimen/sku_padding_10">
     <TextView
         android:id="@+id/sku_review_date"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="@color/staples_black"/>
+    <TextView
+        android:id="@+id/sku_review_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/staples_black"/>
+    <TextView
+        android:id="@+id/sku_review_author"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/staples_black"/>
     <com.staples.mobile.cfa.widget.RatingStars
         android:id="@+id/sku_review_rating"
-        style="@style/SmallRatingStars"/>
+        style="@style/SmallRatingStars"
+        android:paddingTop="@dimen/sku_padding_5"
+        android:paddingBottom="@dimen/sku_padding_5"/>
     <TextView
         android:id="@+id/sku_review_comments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="3"
-        android:ellipsize="end"/>
+        android:ellipsize="end"
+        android:textColor="@color/staples_black"/>
 </LinearLayout>
