--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -153,10 +153,10 @@
     <style name="LargePriceSticker">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="majorTextSize">@dimen/fontsize_20sp</item>
+        <item name="majorTextSize">@dimen/fontsize_24sp</item>
         <item name="majorTextColor">@color/staples_red</item>
         <item name="minorTextSize">@dimen/fontsize_16sp</item>
-        <item name="minorTextColor">@color/staples_middle_gray</item>
+        <item name="minorTextColor">@color/staples_dark_gray</item>
         <item name="android:gravity">center</item>
     </style>
     <style name="SmallPriceSticker">
@@ -165,7 +165,7 @@
         <item name="majorTextSize">@dimen/fontsize_16sp</item>
         <item name="majorTextColor">@color/staples_red</item>
         <item name="minorTextSize">@dimen/fontsize_12sp</item>
-        <item name="minorTextColor">@color/staples_middle_gray</item>
+        <item name="minorTextColor">@color/staples_dark_gray</item>
     </style>
 
     <style name="SmallRatingStars">
@@ -173,17 +173,28 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/fontsize_10sp</item>
         <item name="noReviews">@string/no_reviews</item>
+        <item name="minorTextColor">@color/staples_dark_gray</item>
     </style>
 
     <style name="SkuSummaryHeader">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_height">@dimen/sku_padding_35</item>
         <item name="android:textSize">@dimen/fontsize_16sp</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:layout_gravity">left|center_vertical</item>
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:paddingLeft">@dimen/sku_padding_10</item>
+        <item name="android:textColor">@color/staples_dark_gray</item>
+    </style>
+
+    <style name="SkuDetailHeader">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/fontsize_16sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:layout_gravity">right|center_vertical</item>
+        <item name="android:gravity">right|center_vertical</item>
+        <item name="android:padding">@dimen/sku_padding_10</item>
         <item name="android:textColor">@color/staples_dark_gray</item>
     </style>
 
@@ -192,25 +203,15 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">top|center_horizontal</item>
         <item name="android:paddingTop">@dimen/verticalspacing_8dp</item>
+        <item name="android:paddingLeft">@dimen/sku_padding_10</item>
         <item name="android:src">@drawable/bullet</item>
     </style>
     <style name="SkuBulletTextStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">@dimen/sku_hori_padding</item>
+        <item name="android:paddingLeft">@dimen/sku_padding_10</item>
         <item name="android:textSize">@dimen/fontsize_16sp</item>
-    </style>
-
-    <style name="SkuSpecStyle">
-        <item name="android:textSize">@dimen/margin_16dp</item>
-    </style>
-    <style name="SkuSpecNameStyle" parent="SkuSpecStyle">
-        <item name="android:paddingLeft">@dimen/sku_hori_padding</item>
-        <item name="android:paddingRight">@dimen/sku_hori_padding</item>
-    </style>
-    <style name="SkuSpecValueStyle" parent="SkuSpecStyle">
-        <item name="android:paddingLeft">@dimen/sku_hori_padding</item>
-        <item name="android:paddingRight">@dimen/sku_hori_padding</item>
+        <item name="android:textColor">@color/staples_black</item>
     </style>
 
     <!-- Store locator styling -->
