--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -3,8 +3,8 @@
     android:id="@+id/bundle_item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/fixed_grid_tall_height"
-    android:paddingLeft="@dimen/margin_8dp"
-    android:paddingRight="@dimen/margin_8dp"
+    android:paddingLeft="@dimen/verticalspacing_8dp"
+    android:paddingRight="@dimen/verticalspacing_8dp"
     android:background="@color/staples_white">
     <ImageView
         android:id="@+id/image"
