--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -5,57 +5,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/staples_white"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/margin_16dp"
-    android:paddingRight="@dimen/margin_16dp">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/emailLabel"
-        style="@style/GraySubheading"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-		android:paddingTop="@dimen/verticalspacing_8dp"
-        android:text="@string/email" />
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/margin_16dp"
+        android:paddingRight="@dimen/margin_16dp">
 
-    <TextView
-        android:id="@+id/emailProfile"
-        style="@style/DrawerStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-		android:paddingTop="@dimen/verticalspacing_8dp" />
+        <TextView
+            android:id="@+id/emailLabel"
+            style="@style/GraySubheading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/verticalspacing_16dp"
+            android:text="@string/email"
+            android:textSize="@dimen/fontsize_12sp"
+            android:textColor="@color/staples_dark_gray"/>
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="@color/staples_black"
-		android:paddingTop="@dimen/verticalspacing_8dp" />
+        <TextView
+            android:id="@+id/emailProfile"
+            style="@style/DrawerStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/verticalspacing_16dp"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_black"/>
 
-    <TextView
-        android:id="@+id/userNameLabel"
-        style="@style/GraySubheading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-		android:paddingTop="@dimen/verticalspacing_8dp"
-        android:text="@string/username" />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/staples_black"
+            android:layout_marginTop="@dimen/verticalspacing_8dp"/>
 
-    <TextView
-        android:id="@+id/userNameProfile"
-        style="@style/DrawerStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-		android:paddingTop="@dimen/verticalspacing_8dp" />
+        <TextView
+            android:id="@+id/userNameLabel"
+            style="@style/GraySubheading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/verticalspacing_16dp"
+            android:textSize="@dimen/fontsize_12sp"
+            android:textColor="@color/staples_dark_gray"
+            android:text="@string/username"/>
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="@color/staples_black"
-		android:paddingTop="@dimen/verticalspacing_8dp" />
+        <TextView
+            android:id="@+id/userNameProfile"
+            style="@style/DrawerStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/verticalspacing_16dp"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_black"/>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/staples_black"
+            android:paddingTop="@dimen/verticalspacing_8dp"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-		android:layout_marginBottom="@dimen/verticalspacing_8dp"
-		android:layout_marginTop="@dimen/verticalspacing_8dp">
+        android:paddingTop="@dimen/verticalspacing_64dp">
 
         <TextView
             android:layout_width="match_parent"
