--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -86,6 +86,14 @@
         <item name="android:textSize">@dimen/fontsize_20sp</item>
     </style>
 
+    <style name="ProfileStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">@dimen/verticalspacing_16dp</item>
+        <item name="android:textSize">@dimen/fontsize_16sp</item>
+        <item name="android:textColor">@color/staples_black</item>
+    </style>
+
     <style name="InputField">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -115,7 +123,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/fontsize_12sp</item>
-        <item name="android:textColor">@color/staples_middle_gray</item>
+        <item name="android:textColor">@color/staples_dark_gray</item>
     </style>
 
     <style name="CheckoutFooter">
