--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -177,7 +177,7 @@
     </style>
 
     <style name="SkuSummaryHeader">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">@dimen/sku_padding_35</item>
         <item name="android:textSize">@dimen/fontsize_16sp</item>
         <item name="android:textAllCaps">true</item>
