--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/verticalspacing_56dp"
-            android:textColor="@color/staples_middle_gray"
+            android:textColor="@color/staples_dark_gray"
             android:textSize="@dimen/fontsize_18sp"
             android:text="@string/shopping_with_us"
             />
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/verticalspacing_24dp"
-            android:textColor="@color/staples_middle_gray"
+            android:textColor="@color/staples_dark_gray"
             android:textSize="@dimen/fontsize_18sp"
             android:text="@string/price_match_guarantee"
             />
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:textColor="@color/staples_middle_gray"
+            android:textColor="@color/staples_dark_gray"
             android:textSize="@dimen/fontsize_12sp"
             android:text="@string/price_match_guarantee_conditions"
             />
@@ -73,14 +73,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/margin_16dp"
-            android:textColor="@color/staples_middle_gray"
+            android:textColor="@color/staples_dark_gray"
             android:textSize="@dimen/fontsize_18sp"
             android:text="@string/free_delivery"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/staples_middle_gray"
+            android:textColor="@color/staples_dark_gray"
             android:textSize="@dimen/fontsize_12sp"
             android:text="@string/free_delivery_conditions"
             />
