--- a/app/src/main/res/layout/personal_feed_product_item.xml
+++ b/app/src/main/res/layout/personal_feed_product_item.xml
@@ -20,7 +20,7 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:orientation="vertical"
             android:layout_gravity="left|center_vertical">
             <TextView
