--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -2,9 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bundle_item"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/fixed_grid_tall_height"
+    android:layout_height="wrap_content"
     android:paddingLeft="@dimen/verticalspacing_8dp"
     android:paddingRight="@dimen/verticalspacing_8dp"
+    android:paddingBottom="@dimen/verticalspacing_8dp"
     android:background="@color/staples_white">
     <ImageView
         android:id="@+id/image"
