--- a/app/src/main/res/layout/sku_accessory_item.xml
+++ b/app/src/main/res/layout/sku_accessory_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/sku_padding_10">
+    android:padding="@dimen/verticalspacing_8dp">
 
     <ImageView
         android:id="@+id/accessory_image"
