--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -108,7 +108,7 @@
                     android:layout_weight="0.6"/>
                 <Button
                     android:id="@+id/rebate_button"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="@dimen/sku_rebate_height"
                     android:textSize="@dimen/fontsize_16sp"
                     android:text="@string/rebate"
